# url_shortener

./: Cargo.toml  README.md  db.sql  package.json  tailwind.config.js  wrangler.toml
assets/: main.css
db/: schema.sql
src/: lib.rs  main.rs
templates/: base.html  hello.html  home.html
