[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
md5 = "0.7.0"
mysql = "24.0.0"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
# warp = "0.3.6"
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
askama = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
